2009-1-29 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-2.
    * R/sim: for mer method, add option ranef. Users choose to return 
      sim.ranef or not.

2009-1-28 Yu-Sung Su     <ys463@columbia.edu>  
    * man: first attempt to clean up help files to comply the new rule.
            in particular, use \dQuote and \sQuote for "" and ''.
    * man/bayesglm: update reference
    * man/bayespolr: update reference

2009-1-22 Yu-Sung Su     <ys463@columbia.edu>  
    * man/rescale: update reference.
    * man/standardize: update reference.

2009-1-16 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-1.
    * NAMESPACE: export S4 method for standardize
    * man/standardize: add description for S4 methods.
    * R/AllGeneric: add a generic function for standardize 
    * R/standardize: add standardize.default, S4 methods for lm, glm and mer.

2009-1-03 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-0.